--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.14",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/google-plus": "^5.24.0",
+    "@ionic-native/native-storage": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -30,6 +31,7 @@
     "chart.js": "^2.9.3",
     "cordova-android": "8.1.0",
     "cordova-plugin-googleplus": "git+https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "core-js": "^2.5.4",
     "firebase": "^7.14.2",
     "ng2-charts": "^2.3.0",
@@ -83,7 +85,8 @@
         "REVERSED_CLIENT_ID": "com.parcial.covid",
         "WEB_APPLICATION_CLIENT_ID": "647803975799-dm61asd45tlnhkm4a0bfe5esf1fg168l.apps.googleusercontent.com",
         "PLAY_SERVICES_VERSION": "15.0.1"
-      }
+      },
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
